--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="./styles.css"></style>
-    <script src="./javascript.js"></script>
+    <script src="./javascript.js" defer></script>
 </head>
 <body>
-    <button type="button">Click Me!</button>
+    <div class="container">
+        <h1>Single-player Rock Paper Scissors</h1>
+        <div class="button-container">
+            <button id="rock">Rock!</button>
+            <button id="paper">Paper!</button>
+            <button id="scissors">Scissors!</button>
+        </div>
+        <div class="score-table">
+            Player Score: <span class="player-score">0</span>, Computer Score: <span class="computer-score">0</span>, Tie Count: <span class="tie-count">0</span>
+        </div>
+        
+    </div>
 </body>
 </html>
